<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.martonbot.audiotrigger2.SettingsActivity"
    android:background="@color/primary_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/audio_trigger_switch_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/SettingsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_trigger_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/audio_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/audio_trigger_enabled"
                    style="@style/SettingsText" />

                <Switch
                    android:id="@+id/switch_enable_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/audio_status_text"
                    android:layout_alignTop="@+id/audio_status_text"
                    android:layout_toEndOf="@+id/audio_status_text"
                    android:gravity="center_vertical"
                    android:padding="5dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/threshold_level_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/SettingsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threshold_title" />

            <RelativeLayout
                android:id="@+id/amp_bar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/amp_bar"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_alignParentStart="true"
                    android:background="@color/primary_dark" />

            </RelativeLayout>

            <SeekBar
                android:id="@+id/threshold_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:padding="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/trigger_cooldown_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/SettingsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cooldown_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Spinner
                    android:id="@+id/cooldown_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:gravity="center"
                    style="@style/SettingsText" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/poll_interval_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/SettingsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poll_interval_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Spinner
                    android:id="@+id/poll_interval_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:gravity="center"
                    style="@style/SettingsText" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
