<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.martonbot.audiotrigger2.MainActivity"
    android:background="@color/primary_dark">

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/settings_label"
        android:padding="15dp"
        android:src="@drawable/ic_settings_white_24dp" />

    <RelativeLayout
        android:id="@+id/chrono_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@drawable/light_circle"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/amp_disc"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:background="@drawable/dark_circle"
            android:gravity="center" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/minutes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/double_zero"
                android:textColor="@color/icons"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/seconds_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/minutes_text"
                android:layout_alignTop="@id/minutes_text"
                android:layout_toEndOf="@id/minutes_text"
                android:freezesText="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/double_zero"
                android:textColor="@color/icons"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/hundredths_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/seconds_text"
                android:layout_alignTop="@id/seconds_text"
                android:layout_toEndOf="@id/seconds_text"
                android:freezesText="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/double_zero"
                android:textColor="@color/icons"
                android:textSize="25sp" />

        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/reset_label"
        android:padding="15dp"
        android:src="@drawable/ic_restore_white_24dp"
        android:visibility="gone" />

</RelativeLayout>
